small z-index fix

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -24,7 +24,7 @@
   left: 0;
   border: solid;
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header h1 {
